Lógica/Aula 4 -/Exercicios/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Lab-xx-xx\Desktop\Aula4 -T- Diógenes\Exercicios
-d
C:\Users\Lab-xx-xx\Desktop\Aula4 -T- Diógenes\Exercicios\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Lab-xx-xx\Desktop\Aula4 -T- Diógenes\Exercicios\Main.java
<---- end of javadoc command ---->
Loading source file C:\Users\Lab-xx-xx\Desktop\Aula4 -T- Diógenes\Exercicios\Main.java...
C:\Users\Lab-xx-xx\Desktop\Aula4 -T- Diógenes\Exercicios\Main.java:15: error: class, interface, or enum expected
}
^
1 error
